crates/cm-cli/tests/snapshots/snapshot_tests__cx_recall.snap
---
source: crates/cm-cli/tests/snapshot_tests.rs
expression: resp
---
{
  "results": [
    {
      "confidence": "high",
      "created_by": "agent:claude-code",
      "id": "[redacted]",
      "kind": "fact",
      "scope_path": "global",
      "snippet": "This is a test fact body for snapshot testing.",
      "tags": [
        "test-tag"
      ],
      "title": "Test fact",
      "token_estimate": 12,
      "updated_at": "[redacted]"
    }
  ],
  "returned": 1,
  "scope_chain": [
    "global"
  ],
  "scope_hits": {
    "global": 1
  }
}
