crates/cm-cli/tests/snapshots/snapshot_tests__cx_store.snap
---
source: crates/cm-cli/tests/snapshot_tests.rs
assertion_line: 91
expression: resp
---
{
  "content_hash": "[redacted]",
  "created_at": "[redacted]",
  "id": "[redacted]",
  "kind": "decision",
  "message": "Entry stored.",
  "scope_path": "global",
  "superseded": null,
  "title": "Architecture decision"
}
